# python-windows

./: .gitignore  Dockerfile  Dockerfile-3.8  README.md  build.yaml  entrypoint-windows.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  build.yaml.bak  exe.yaml.bak  package.yaml  package.yaml.example
