[tool.poetry]
name = "python-windows"
version = "0.1.0"
description = ""
authors = ["moss <geekzsp@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.5"
pandas = "^1.4.2"
openpyxl = "^3.0.10"
dddocr='^1.4.3 '

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

